# vizero

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  LISP_REPL_PHASE1_SUMMARY.md  README.md  boot.asm  build.bat  build.sh  hello.c  isr.c  left_split_test.c  manual.md  right_split_test.c  sql_test.txt  test.cs  test.xml  test1.txt  test2.txt  test_clangd.c  test_clangd_utf8.c  test_completion.c  test_completion_crash.c  test_help.txt  test_irc.txt  test_irc_commands.c  test_javascript.js  test_lisp.lisp  test_lisp_repl.lisp  test_lisp_repl_demo.bat  test_lisp_simple.lisp  test_multiline_api.c  test_path.cpp  test_php_syntax.php  test_plugin_extension_conversion.c  test_python.py  test_range.txt  test_shell.txt  test_simple.c  (+3 more)
.cache/clangd/index/: application.cpp.BB06E8D620417FDB.idx  application.h.0748058876255F5C.idx  buffer.cpp.6D7C3877B6378FBE.idx  buffer.h.39421AA37D8E8163.idx  clangd_plugin.c.A7B01F1C7C4EECCC.idx  colour_theme.cpp.0EB1A02E95A7A347.idx  colour_theme.h.736F8C0E647683F2.idx  command_parser.cpp.C303B176CE28A158.idx  command_parser.h.3A9B4C6C32AA65C1.idx  cursor.cpp.06873A65C9354496.idx  cursor.h.C6D4714EFCD86DD4.idx  editor_state.cpp.913569A63C85456E.idx  editor_state.h.1959E5B346CB4646.idx  editor_state_internal.h.B62D9DE1254761FA.idx  editor_window.cpp.FAFC3ACBBAF93B0C.idx  editor_window.h.3CE0AFF2CBF0D20B.idx  editor_window_constants.h.32076B51320EAEBA.idx  editor_window_move_visual_row.c.EBFF8A6A01BE1F0C.idx  example_plugin.c.ED45CA564C46FF07.idx  file_browser.c.B6A2193A4AB060A1.idx  file_utils.cpp.D58F328F350BB2DB.idx  file_utils.h.DCCA7CCA7BB3550D.idx  filewatch_poll.c.CAD38AF0D6E46596.idx  filewatch_poll.h.A701FFE1F59E5985.idx  input_manager.cpp.D4F79ED914E35DC4.idx  input_manager.h.886EBCC8A6BD4488.idx  irc_plugin.c.6C0FBFA510E91084.idx  json.hpp.7B0A47F718293995.idx  json_parser.cpp.BCF977D0F1329DB4.idx  json_parser.h.28A1CE0B01DD0D37.idx  line.cpp.DF4BB2AD93DA4EF6.idx  line.h.2FBE71CCDF2FCC16.idx  lisp_repl_plugin.c.0C6CF2CADBE03DE6.idx  log.h.5EFA82939D4933DC.idx  lsp_client.cpp.365EE4A57904E0BD.idx  lsp_client.h.1806FEE92F907A58.idx  main.cpp.C4972455C81F2373.idx  mode_manager.cpp.B7978DEB6C5DEDBB.idx  mode_manager.h.EFDBF4404DF080E9.idx  plugin_interface.cpp.16D3040283A01443.idx  (+34 more)
.github/: copilot-instructions.md
docs/: CLANGD_INTEGRATION_PROGRESS.md  COLOR_THEMES.md  COLOUR_THEMES.md  DEVELOPMENT.md  DOCUMENTATION_STATUS.md  JAVASCRIPT_SYNTAX_HIGHLIGHTER.md  LISP_REPL_PLUGIN.md  PLUGIN_CONFLICTS.md  SLIME_INSTALLATION_GUIDE.md  SLIME_TESTING_GUIDE.md  SQL_REPL_PLUGIN.md  SUGGESTED_COMMANDS.md
include/vizero/: application.h  buffer.h  colour_theme.h  command_parser.h  cursor.h  editor_state.h  editor_window.h  editor_window_constants.h  file_utils.h  filewatch_poll.h  input_manager.h  json_parser.h  line.h  log.h  lsp_client.h  mode_manager.h  plugin_interface.h  plugin_manager.h  plugin_registry.h  project.h  renderer.h  search.h  session.h  settings.h  status_bar.h  status_bar_render.h  string_utils.h  vizero.h  window.h
plugins/: CMakeLists.txt  irc.dll.disabled  manifest.json  manifest.json.backup
plugins/clangd/: CMakeLists.txt  clangd_plugin.c
plugins/example/: example_plugin.c
plugins/file_browser/: file_browser.c
plugins/irc/: CMakeLists.txt  irc_plugin.c
plugins/lisp_repl/: CMakeLists.txt  lisp_repl_plugin.c
plugins/sql_repl/: CMakeLists.txt  sql_repl_plugin.c
plugins/syntax_c/: syntax_c.c
plugins/syntax_csharp/: syntax_csharp.c
plugins/syntax_highlight/: c_syntax.c  cpp_syntax.c  markdown_syntax.c  markdown_syntax.h  syntax_highlight.c
plugins/syntax_javascript/: syntax_javascript.c
plugins/syntax_lisp/: syntax_lisp.c
plugins/syntax_markdown/: syntax_markdown.c
plugins/syntax_php/: syntax_php.c
plugins/syntax_python/: syntax_python.c
plugins/syntax_xml/: syntax_xml.c
src/: main.cpp
src/core/: application.cpp  colour_theme.cpp  filewatch_poll.c  input_manager.cpp  renderer.cpp  search.cpp  session.cpp  settings.cpp  window.cpp
src/editor/: command_parser.cpp  editor_state.cpp  editor_state_internal.h  lsp_diagnostics.cpp  mode_manager.cpp
src/lsp/: lsp_client.cpp
src/plugin/: plugin_interface.cpp  plugin_manager.cpp  plugin_registry.cpp
src/plugin/syntax_highlight/: markdown_syntax.h
src/project/: project.cpp
src/text/: buffer.cpp  cursor.cpp  line.cpp
src/ui/: editor_window.cpp  editor_window_move_visual_row.c  status_bar.cpp  status_bar_render.cpp
src/utils/: file_utils.cpp  json_parser.cpp  string_utils.cpp
tests/: test_editor.cpp  test_framework.cpp  test_framework.h
